Swaggerの見出しの文章変更